2

* Mesh contest support
* Journal integration
* Sequencing puzzles
* My own image (from filesystem)